# seed-quickstart

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  index.js  package-lock.json  package.json  postcss.config.js  webpack.config.js
src/: app.rs  lib.rs
static/: index.html
static/css/: applied.css  styles.css
styles/: button.scss  styles.css  tailwind.config.js
