[package]
name = "seed-quickstart"
version = "0.1.0"
authors = ["Frank Panetta <frank@zuudo.com.au>"]
edition = "2018"
description = "Quick start template for Seed web apps"
repository = "https://github.com/fattenap/seed-quickstart"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

serde = { version = "^1.0.85", features = ['derive'] }
futures = "^0.3.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.12" # NOTE: keep in sync with wasm-bindgen version

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 's' 